--- a/app/views/noticeofchange/solicitor/alreadygotcaseerror.html
+++ b/app/views/noticeofchange/solicitor/alreadygotcaseerror.html
@@ -15,7 +15,7 @@ Case details
                 <h1  class="govuk-heading-l">Something went wrong</h1>
 
                 <p>Your organisation already has access to this case.</p>
-                <p>Contact your company case administrator to request access.</p>
+                <p>Contact your case administrator if you require access.</p>
 
                 <p><a href="caselist">View case list</a></p>
 
