--- a/app/views/noticeofchange/solicitor/casedetailsdivorce.html
+++ b/app/views/noticeofchange/solicitor/casedetailsdivorce.html
@@ -31,7 +31,7 @@ Case details
                         <option value="published" >Link respondent</option>
                         <option value="published" >Add Note</option>
                         <option value="published" >Upload document</option>
-                        <option value="updated" >Stop representing</option>
+                        <option value="updated" >Stop representing a client</option>
                     </select>
 
                     <form
