--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -33,7 +33,7 @@ Case details
                     <select class="govuk-select" id="sort" name="sort">
                         <option value="published" selected>Select action</option>
                         <option value="published" >Deceased details</option>
-                        <option value="updated" >Stop representing</option>
+                        <option value="updated" >Stop representing a client</option>
                     </select>
 
                     <form
