--- a/app/views/noticeofchange/solicitor/casedetailspubliclaw.html
+++ b/app/views/noticeofchange/solicitor/casedetailspubliclaw.html
@@ -68,7 +68,7 @@ Case details
                             <option _ngcontent-yiv-c9="" value="35: Object" title="Additional Information">Additional Information</option>
                             <option _ngcontent-yiv-c9="" value="36: Object" title="Manage Reconsideration">Manage Reconsideration</option>
 
-                        <option value="updated" >Stop representing a case</option>
+                        <option value="updated" >Stop representing a client</option>
                     </select>
 
                     <form
