--- a/app/views/noticeofchange/solicitor/confirmstop.html
+++ b/app/views/noticeofchange/solicitor/confirmstop.html
@@ -52,8 +52,8 @@ Case details
                 {% if data.stoppingoutcome == 'auto' %}
                     <div class="govuk-inset-text">
                         <p class="govuk-!-font-weight-bold">After submitting</p>
-                        <p>You'll receive an email to confirm you've stopped representation.</p>
-                        <p>You will no longer have acces to the case.</p>
+                        <p>You’ll receive an email to confirm you’ve stopped representing this client.</p>
+                        <p>You’ll be removed from the case and no longer have access to it.</p>
                     </div>
                 {% endif %}
 
