--- a/app/views/noticeofchange/solicitor/emailofremoved.html
+++ b/app/views/noticeofchange/solicitor/emailofremoved.html
@@ -67,12 +67,14 @@
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Alex Smith</p>
-                            <p style="margin:0 0 30px;font-size:19px">You are no longer representing clients on the MyHMCTS case with reference 1593-0136-4696-9976.</p>
+                            <p style="margin:0 0 30px;font-size:19px">You are no longer representing one or more clients on case 1593-0136-4696-9976.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.</p>
 
+                            <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">This is an automated email - we can't respond to replies.</p>
 
-                            <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
+
 
 
                             <br>
