--- a/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
+++ b/app/views/noticeofchange/solicitor/casedetailsfinancialremedy.html
@@ -27,7 +27,7 @@ Case details
                         <option value="published" >Link respondent</option>
                         <option value="published" >Add Note</option>
                         <option value="published" >Upload document</option>
-                        <option value="updated" >Stop representing a case</option>
+                        <option value="updated">Stop representing a client</option>
                     </select>
 
                     <form
