--- a/app/views/noticeofchange/solicitor/casedetailsimmigration.html
+++ b/app/views/noticeofchange/solicitor/casedetailsimmigration.html
@@ -26,7 +26,7 @@ Case details
                         <option value="updated" >Edit appeal</option>
                         <option value="updated" >Submit your appeal</option>
                         <option value="updated" >Share case with colleague</option>
-                        <option value="updated" >Stop representing a case</option>
+                        <option value="updated" >Stop representing a client</option>
                     </select>
 
                     <form
