--- a/app/views/noticeofchange/solicitor/stopreason.html
+++ b/app/views/noticeofchange/solicitor/stopreason.html
@@ -16,7 +16,7 @@ Case details
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Enter the reason (optional)</h1>
+                           <h1 class="govuk-heading-l">Give a reason (optional)</h1>
                       </div>
                 </div>
 
