probate roles update

--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -47,7 +47,7 @@ Case details
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Petitioner" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
-                        Relative of the deceased
+                        Executor
                     </label>
                 </div>
             </div>
