--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -79,7 +79,7 @@ Case details
                     {% if data.caselist == 'divorce' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Date case was submitted
+                                Date of marriage
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 {{data.day}} {{data.monthoutput}} {{data.year}}
