--- a/app/views/noticeofchange/solicitor/securityquestiondivorce.html
+++ b/app/views/noticeofchange/solicitor/securityquestiondivorce.html
@@ -30,7 +30,7 @@ Case details
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">When was the case submitted?</h1>
+                           <h1 class="govuk-heading-l">What was the date of marriage?</h1>
                       </div>
                 </div>
 
