updates to match CCD and have proper approval

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -23,7 +23,7 @@
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=divorce&">Scenario 3.1</a></p>
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=approval&caselist=divorce&">Scenario 3.2</a></p>
 
-        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&autoapproved=true&adminonly=false&servicedown=false&caselist=divorce&stoppingmoredetail=&">Scenario 5</a></p>
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&autoapproved=true&adminonly=false&servicedown=false&caselist=divorce&stoppingmoredetail=&hideone=false&hidetwo=false&hidethree=false&">Scenario 5</a></p>
 
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&caselist=divorce&stoppingmoredetail=&">Scenario 6</a></p>
 
@@ -39,7 +39,7 @@
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=probate&">Scenario 3.1</a></p>
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=approval&caselist=probate&">Scenario 3.2</a></p>
 
-        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&autoapproved=true&adminonly=false&servicedown=false&caselist=probate&stoppingmoredetail=&">Scenario 5</a></p>
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&autoapproved=true&adminonly=false&servicedown=false&caselist=probate&stoppingmoredetail=&hideone=false&hidetwo=false&hidethree=false&">Scenario 5</a></p>
 
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&caselist=probate&stoppingmoredetail=&lastname=&">Scenario 6</a></p>
 
