--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -57,7 +57,7 @@ Case details
                 {% if data.hideone == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&newcaseselected=false&casetohide=a&clientname=Anne Yang&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&casenumberselectedccdformat=3689-2642-5857-7069&newcaseselected=false&casetohide=a&clientname=Anne Yang&">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">AY-34137102</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Yang</td>
@@ -69,7 +69,7 @@ Case details
                 {% if data.hidetwo == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&newcaseselected=false&casetohide=b&clientname=Ethel Williams&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&casenumberselectedccdformat=1593-0136-4696-9976&newcaseselected=false&casetohide=b&clientname=Ethel Williams&">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">EW-6671238</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Williams</td>
@@ -81,7 +81,7 @@ Case details
                 {% if data.hidethree == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&newcaseselected=false&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&casenumberselectedccdformat=3827-2010-3565-3933&newcaseselected=false&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">NJ-7982475</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
@@ -252,7 +252,7 @@ Case details
                 {% if data.hideone == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&clientname=James Smith&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&casenumberselectedccdformat=3689-2642-5857-7069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&clientname=James Smith&">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Feb 2020, 9:50:28 AM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">James</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Smith</td>
@@ -268,7 +268,7 @@ Case details
                 {% if data.hidetwo == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&clientname=Mary Hoyle&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&casenumberselectedccdformat=1593-0136-4696-9976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&clientname=Mary Hoyle&">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020, 1:48:33 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Mary</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Hoyle</td>
@@ -284,7 +284,7 @@ Case details
                 {% if data.hidethree == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&casenumberselectedccdformat=3827-2010-3565-3933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">2 Dec 2019, 4:23:50 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
