--- a/app/views/noticeofchange/solicitor/stopselectclients.html
+++ b/app/views/noticeofchange/solicitor/stopselectclients.html
@@ -25,7 +25,12 @@ Case details
 
 <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
-        <h1 class="govuk-heading-l">Which client do you want to stop representing?</h1>
+
+        <p class="govuk-heading-m govuk-!-margin-bottom-3">Stop representing a client</p>
+
+        <p class="govuk-heading-m govuk-!-margin-bottom-3">#{{ data.casenumberselectedccdformat }}&nbsp; </p>
+
+        <h1 class="govuk-heading-m">Which clients do you want to stop representing?</h1>
     </div>
 </div>
 
@@ -68,6 +73,7 @@ Case details
                 Continue
             </button>
         </div>
+        <p><a href="caselist">Cancel</a></p>
 
 
 </form>
