--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -92,13 +92,13 @@ Case details
                     <!-- When approval is needed  -->
                     {% if data.autoapproved == 'false' %}
                         {% if data.inreview == 'true' %}
-                            <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
-                            <p>Will decide to accept or reject your request.</p>
-                            <p class="govuk-inset-text">You won't be notified when this happens.</p>
-                            <p>If your request is accepted the case will appear in your caselist.</p>
-                            <p class="govuk-body">
-                                <a href="caselist">View case list</a>
-                            </p>
+                                <h2 class="govuk-heading-m  govuk-!-margin-top-6">What happens next</h2>
+                                <p>We’re reviewing your request.</p>
+                                <p>We’ll send you an email confirming our decision.</p>
+                                <p>If your request is accepted, the case will appear in your case list.</p>
+                                <p class="govuk-body">
+                                    <a href="caselist">View case list</a>
+                                </p>
                         {% else %}
                             <p>Notice of change request has been rejected.</p>
                             <p>This may be because you entered incorrct details.</p>
