--- a/app/views/noticeofchange/solicitor/stopreason.html
+++ b/app/views/noticeofchange/solicitor/stopreason.html
@@ -14,9 +14,14 @@ Case details
 
 
 
-                <div class="hmcts-page-heading">
+                <div class="">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Give a reason (optional)</h1>
+
+                          <p class="govuk-heading-m govuk-!-margin-bottom-3">Stop representing a client</p>
+
+                          <p class="govuk-heading-m govuk-!-margin-bottom-3">#{{ data.casenumberselectedccdformat }}&nbsp; </p>
+
+                          <h1 class="govuk-heading-m govuk-!-margin-bottom-3">Give a reason (optional)</h1>
                       </div>
                 </div>
 
@@ -31,14 +36,14 @@ Case details
                         <br>
 
                         <div>
-                            <a class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                            <a class="govuk-button govuk-button--secondary" data-module="govuk-button" href="stopselectclients">
                                 Previous
                             </a>
                             <button class="govuk-button" data-module="govuk-button">
                                 Continue
                             </button>
                         </div>
-
+                        <p><a href="caselist">Cancel</a></p
                 </form>
 
             </div>
