--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -156,7 +156,7 @@ Case details
                     <input type="hidden" name="answers-checked" value="true">
 
                     <button class="govuk-button" data-module="govuk-button">
-                        Submit request
+                        Submit
                     </button>
 
                 </form>
