updated content mid testing

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -107,7 +107,7 @@
                 active: pageId == '#'
                 },
                 {
-                text: 'Transfer existing case',
+                text: 'Acquire case file',
                 href: getUrl('/startnoc'),
                 active: pageId == '#'
                 }
