--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -39,9 +39,9 @@ Case details
                         <dd class="govuk-summary-list__value">
 
                             {% if data.takenfrom == 'lip' %}
-                                Transfer existing case from a citizen
+                                Acquire case file from a citizen
                             {% else %}
-                                Transfer existing case from a solicitor
+                                Acquire case file from a solicitor
                             {% endif %}
                             <br>(Notice of Change)
                         </dd>
@@ -64,7 +64,7 @@ Case details
 
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            Your role
+                            Client type
                         </dt>
                         <dd class="govuk-summary-list__value">
                             {{data.role}}
