--- a/app/views/noticeofchange/solicitor/selectroledivorce.html
+++ b/app/views/noticeofchange/solicitor/selectroledivorce.html
@@ -47,13 +47,13 @@ Case details
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Petitioner" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
-                        Petitioner acting in person
+                        Petitioner
                     </label>
                 </div>
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Respondent" >
                     <label class="govuk-label govuk-radios__label" for="radio2">
-                        Respondent acting in person
+                        Respondent
                     </label>
                 </div>
             </div>
